--- a/render.yaml
+++ b/render.yaml
@@ -1,2 +1,22 @@
+
 services:
   - type: web
+    name: storeleads-backend
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    envVars:
+      - key: API_HOST
+        value: 0.0.0.0
+      - key: API_PORT
+        value: 10000
+      - key: CSV_FILE
+        value: domains_export.csv
+
+  - type: static
+    name: storeleads-frontend
+    buildCommand: "cd frontend && npm install && npm run build"
+    staticPublishPath: "frontend/build"
+    envVars:
+      - key: REACT_APP_API_URL
+        value: "https://storeleads-backend.onrender.com"
