--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,9 @@
-version: '3'
+
+version: '3.8'
+
+services:
+  backend:
+    build: .
+    ports:
+      - "${PORT}:${PORT}"
+    command: python -m uvicorn main:app --host 0.0.0.0 --port ${PORT}
