--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-
-version: '3.8'
-
+version: "3"
 services:
-  backend:
+  app:
     build: .
     ports:
       - "${PORT}:${PORT}"
-    command: python -m uvicorn main:app --host 0.0.0.0 --port ${PORT}
+    environment:
+      - PORT=${PORT}
+    command: uvicorn main:app --host 0.0.0.0 --port ${PORT}
